[gd_scene load_steps=3 format=3 uid="uid://qnbbvpg28iqf"]

[ext_resource type="Script" uid="uid://dd83xl40skv16" path="res://Script/UI/main_menu.gd" id="1_06t4h"]
[ext_resource type="Texture2D" uid="uid://daggikb01ylu4" path="res://Assets/bg images/bg gimp.png" id="2_7vrkn"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_right = -3.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_06t4h")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_right = 3.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_7vrkn")
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = -34.5
offset_right = 102.0
offset_bottom = 119.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "JUGAR
"

[node name="ControlButton" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "TUTORIAL"

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "CREDITOS"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "SALIR"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -635.0
offset_top = 130.0
offset_right = 641.0
offset_bottom = 435.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.272655, 0.272655, 0.272655, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 110
text = "EcoCatch
"
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ControlButton" to="." method="_on_control_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
